@startuml
hide methods
left to right direction
skinparam classAttributeIconSize 0

class Company{
 -chemicalLab
}

class ClinicalAnalysisLaboratory{
    -idLaboratory
    -name
    -address
    -phoneNumber
    -tin
    -testType
}


class ParametersCategory{
    -code
    -name
}

class Parameter{
    -code
    -name
    -description
}


ClinicalAnalysisLaboratory "1" -- "*" Parameter : capable of analysing >
ClinicalAnalysisLaboratory "1" -- "*" ParametersCategory : adopts >
Parameter "*" -- "1" ParametersCategory : presented under >
Company "1" -- "*" ClinicalAnalysisLaboratory : owns >
@enduml